--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
 
-    <img src="assets/Risorsa9.jpg">
+    <img src="assets/Risorsa9.jpg" width="375" height="1952">
   </head>
   <body>
   </body>
